--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,55 @@
 .App {
   text-align: center;
 }
+
+body {
+ font-family: calibri;
+}
+
+input[type=radio] {
+    display:none;
+  }
+
+input[type=radio] + label {
+    display:inline-block;
+    margin: 5px;
+    padding: 4px 12px;
+    margin-bottom: 5px;
+    font-size: 14px;
+    line-height: 30px;
+    color: #333;
+    text-align: center;
+    text-shadow: 0 1px 1px rgba(255,255,255,0.75);
+    vertical-align: middle;
+    cursor: pointer;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+  }
+
+   input[type=radio]:checked + label {
+    background-image: none;
+    outline: 0;
+    background-color:#e0e0e0;
+  }
+
+.options {
+  list-style: none;
+  -moz-column-count: 3;
+  -moz-column-gap: 5%;
+  -webkit-column-count: 3;
+  -webkit-column-gap: 5%;
+  column-count: 3;
+  column-gap: 5%;
+  padding: 0px;
+}
+
+.answer-form {
+  width: 200px;
+  margin: auto;
+}
+
+#radio-pass-label {
+  width: 50%;
+  align-items: center;
+}
