Implement react-progressbar.js and create Bar Component for Quiz.

--- a/src/App.css
+++ b/src/App.css
@@ -57,8 +57,10 @@ input[type=button] {
   width: 40%;
   align-items: center;
   vertical-align: middle;
+  align-content: center;
 }
 
 #plate {
   flex: 1;
 }
+
