--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+html, body {
+  height: 100%;
+  border: 1px solid red;
+}
+
 .App {
   text-align: center;
 }
@@ -50,7 +55,7 @@ input[type=button] {
 }
 
 #quiz-layout {
-  display: flex;
+  /*display: flex;*/
 }
 
 #numpad {
@@ -60,5 +65,23 @@ input[type=button] {
 }
 
 #plate {
-  flex: 1;
+  /*flex: 1;*/
+
+}
+
+#root {
+  width: 80%;
+  margin: 0 auto;
+  max-width: 960px;
+  border: 1px solid green;
+  height: 100%;
+}
+
+.homepage-image {
+  width: 100%;
+}
+
+canvas.plates {
+  /*width: 100%;*/
+  height: 250px;
 }
