--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ input[type=button] {
 #root {
   width: 80%;
   margin: 0 auto;
-  max-width: 960px;
+  /*max-width: 960px;*/
   border: 1px solid green;
   height: 100%;
 }
@@ -81,7 +81,20 @@ input[type=button] {
   width: 100%;
 }
 
-canvas.plates {
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+    canvas.plates {
   /*width: 100%;*/
   height: 250px;
 }
+}
+
+
+
+
+
+
+
