--- a/src/App.css
+++ b/src/App.css
@@ -63,9 +63,6 @@ input[type=button] {
   width: 60%;
 }
 
-#section2 {
-  width: 40%;
-}
 
 #root {
   width: 80%;
@@ -106,6 +103,10 @@ input[type=button] {
     order: -1;
     height: 40%;
     }
+  }
+
+  #root {
+    width: 100%;
   }
 }
 
@@ -224,5 +225,8 @@ input[type=button] {
 }
 
 
-
+#section2 {
+  border: 1px solid red;
+  width: 40%;
+}
 
