--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ input[type=button] {
     border-color: #e6e6e6 #e6e6e6 #bfbfbf;
   }
 
-   input[type=button]:active {
+   input[type=button]:active, input[type=button]:focus {
     background-image: none;
     outline: 0;
     background-color:#e0e0e0;
@@ -83,14 +83,14 @@ input[type=button] {
   width: 100%;
 }
 
-/*@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
+/*@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
   and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) { 
+  and (orientation: portrait) {
     canvas.plates {
   /*width: 100%;*/
-  /*height: 250px;*//**/  
+  /*height: 250px;*//**/
 
 #progress {
   order: -1;
@@ -124,7 +124,7 @@ input[type=button] {
     border: 1px solid #EFEFEF;
     border-radius: 3px;
     outline: none;
-    
+
     width: 100px;
     height: 600px;
     overflow: auto;
