Got first and last boxes to stay static

--- a/src/App.css
+++ b/src/App.css
@@ -86,13 +86,14 @@ input[type=button] {
     border-radius: 3px;
     outline: none;
     
-    width: 100px;
+    width: 44px;
     height: 600px;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     border: 1px solid #E0E0E0;
     list-style: none;
-    padding: 0;
+    padding: 5px 15px 5px 5px;
+    margin: 20px;
 }
 .SortableItem {
     display: -webkit-box;
@@ -103,9 +104,9 @@ input[type=button] {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-    width: 100%;
-    height: 60px;
-    padding: 0 20px;
+    width: 42px;
+    height: 42px;
+    padding: 10px 20px;
     background-color: #FFF;
     border-bottom: 1px solid #EFEFEF;
     box-sizing: border-box;
@@ -143,7 +144,7 @@ input[type=button] {
   -ms-flex-align:center;
   align-items:center;
   width:100px;
-  padding:0 20px;
+  padding:10px 20px;
   background-color:#fff;
   border-bottom:1px solid #efefef;
   box-sizing:border-box;
@@ -170,4 +171,10 @@ input[type=button] {
   width:100px;
   border-right:1px solid #efefef;
   border-bottom:0
+}
+
+.Hues {
+display: felx;
+flex-direction: row;
+width: 700px;
 }
