--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
 html, body {
   height: 100%;
+  padding-left: 5px;
+  padding-right: 5px;
 /*  border: 1px solid red;
 */}
+
+nav {
+  padding-top: 20px;
+}
 
 .App {
   text-align: center;
@@ -72,7 +78,7 @@ canvas.plates {
   width: 80%;
   margin: 0 auto;
   /*max-width: 960px;*/
-  border: 1px solid green;
+  /*border: 1px solid green;*/
   height: 100%;
 }
 
@@ -83,55 +89,6 @@ canvas.plates {
  #progress {
     order: -1;
     height: 40%;
-}
-
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) { 
-  .answer-form {
-    width: 130px;
-    padding-left: 100px;
-  }
-
-  .bar-class {
-   margin-right: 250px;
-  }
-
-  #quiz-layout {
-  display: block;
-  }
-
-  #progress {
-  order: -1;
-  height: 40%;
-  }
-
-  .progressbar {
-  width: 35% !important; 
-  left: 10% !important; 
-  top: 66% !important; 
-  position: absolute !important;
-  }
-
-  canvas.plates {
-  width: 250px;
-  height: 250px;
-  }
-
-  #plate {
-    margin: 0 auto;
-  }
-
-  #root {
-    width: 100%;
-  }
-
-  #section2{
-    margin: 0 auto;
-    height: 0px;
-  }
 }
 
 #numpad {
@@ -171,6 +128,7 @@ canvas.plates {
     padding: 5px 15px 5px 5px;
     margin: 20px;
 }
+
 .SortableItem {
     display: -webkit-box;
     display: -webkit-flex;
@@ -266,3 +224,86 @@ canvas.plates {
 }
 
 
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//*
+M  E  D  I  A    Q  U  E  R  I  E  S 
+*//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+  nav {
+  padding-top: 10px;
+  }
+/*  .answer-form {
+    width: 130px;
+    padding-left: 100px;
+  }*/
+
+/*  .bar-class {
+   margin-right: 250px;
+  }*/
+
+  #quiz-layout {
+  display: block;
+  }
+
+/*  #progress {
+  order: -1;
+  height: 40%;
+  }
+
+  .progressbar {
+  width: 35% !important; 
+  left: 10% !important; 
+  top: 66% !important; 
+  position: absolute !important;
+  }*/
+
+  canvas.plates {
+  width: 250px;
+  height: 250px;
+  }
+
+  #plate {
+    margin: 0 auto;
+  }
+
+  #root {
+    width: 100%;
+  }
+
+  #section2{
+    margin: 0 auto;
+    height: 0px;
+  }
+
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+/*   M  U  N  S  E  L  L    T  E  S  T   */
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+.SortableList {
+    position: relative;
+    z-index: 0;
+    background-color: #F3F3F3;
+    border: 1px solid #EFEFEF;
+    border-radius: 3px;
+    outline: none;
+    
+    width: 44px;
+    height: 420px;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    border: 1px solid #E0E0E0;
+    list-style: none;
+    padding: 0px 0px 5px 5px;
+    margin: 10px;
+}
+
+
+}
