--- a/src/App.css
+++ b/src/App.css
@@ -85,11 +85,11 @@ canvas.plates {
     height: 40%;
 }
 
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
   and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) { 
+  and (orientation: portrait) {
   .answer-form {
     width: 200px;
   }
@@ -97,7 +97,7 @@ canvas.plates {
   #quiz-layout {
   display: block;
   }
-  
+
   canvas.plates {
   width: 250px;
   height: 250px;
@@ -239,5 +239,69 @@ canvas.plates {
 #section2 {
   border: 1px solid red;
   width: 50%;
+}
+
+#outputDiv canvas {
+  width: 100%;
+  height: 100%;
+}
+.container {
+  display: table;
+  width:100%;
+  height:100%
+}
+.container div {
+  display: table-row;
+}
+
+#dropNotification {
+  position: absolute;
+  top:100px;
+  left: 20px;
+  right:20px;
+  text-align:center;
+  pointer-events: none;
+}
+
+.boxed {
+  background-color: white;
+/*  box-shadow: 5px 5px 2px #999999;
+  border: 1px solid black;
+  border-radius: 10px;*/
+}
+
+#aboutBox {
+  position:absolute;
+  top:50px;
+  left: 25%;
+  width: 50%;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#outCanvas {
+/*  width: 1100px;*/
+}
+
+.inactive {
+  display: none;
+}
+
+#viewOptions {
+  list-style: none;
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+
+}
+
+@media (max-width: 640px)
+{
+  #viewOptions
+  {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+  }
 }
 
