--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,12 @@ nav {
   padding-top: 20px;
 }
 
+.logo {
+    margin: auto;
+      text-align: center;
+}
+
+
 .App {
   text-align: center;
 }
@@ -118,7 +124,7 @@ canvas.plates {
     border: 1px solid #EFEFEF;
     border-radius: 3px;
     outline: none;
-    
+
     width: 44px;
     height: 600px;
     overflow: auto;
@@ -227,17 +233,17 @@ canvas.plates {
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//*
-M  E  D  I  A    Q  U  E  R  I  E  S 
+M  E  D  I  A    Q  U  E  R  I  E  S
 *//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 
 
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
   and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) { 
+  and (orientation: portrait) {
   nav {
   padding-top: 10px;
   }
@@ -260,9 +266,9 @@ M  E  D  I  A    Q  U  E  R  I  E  S
   }
 
   .progressbar {
-  width: 35% !important; 
-  left: 10% !important; 
-  top: 66% !important; 
+  width: 35% !important;
+  left: 10% !important;
+  top: 66% !important;
   position: absolute !important;
   }*/
 
@@ -294,7 +300,7 @@ M  E  D  I  A    Q  U  E  R  I  E  S
     border: 1px solid #EFEFEF;
     border-radius: 3px;
     outline: none;
-    
+
     width: 44px;
     height: 420px;
     overflow: auto;
