Fix error caused by unclosed css element.

--- a/src/App.css
+++ b/src/App.css
@@ -326,6 +326,8 @@ M  E  D  I  A    Q  U  E  R  I  E  S
     height: 0px;
   }
 
+}
+
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 /*   M  U  N  S  E  L  L    T  E  S  T   */
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
