--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
+html * {
+  box-sizing: border-box;
+}
+
 html, body {
   height: 100%;
   padding-left: 5px;
   padding-right: 5px;
-/*  border: 1px solid red;
-*/}
+  margin: 0px;
+}
 
 nav {
   padding-top: 20px;
@@ -15,6 +19,7 @@ nav {
 
 body {
  font-family: calibri;
+ /*border: 3px solid green;*/
 }
 
 input[type=button] {
@@ -208,9 +213,9 @@ canvas.plates {
 }
 
 .Hues {
-  display: felx;
-  flex-direction: row;
-  width: 700px;
+  display: flex;
+  flex-direction: column;
+  width: 700px; /* this is a hack, fix back to 700 and get the phone version to be this */
 }
 
 #section2 {
@@ -231,7 +236,6 @@ M  E  D  I  A    Q  U  E  R  I  E  S
 *//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
-
 
 @media only screen 
   and (min-device-width: 375px) 
@@ -295,7 +299,7 @@ M  E  D  I  A    Q  U  E  R  I  E  S
     border-radius: 3px;
     outline: none;
     
-    width: 44px;
+    width: 60px;
     height: 420px;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
@@ -305,5 +309,36 @@ M  E  D  I  A    Q  U  E  R  I  E  S
     margin: 10px;
 }
 
+.munsell-button {
+  /*border: 1px solid red;*/
+  align-self: center;
+  position: absolute;
+  top: 150px;
+  right: 10px;
+
+  order: 0;
+}
+
+#container-hue{
+  /*border: 1px solid red;*/
+}
+
+.a-flex-row-class{
+  display:flex;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.Hues {
+  display: flex;
+  flex-direction: column;
+  width: 350px; /* this is a hack, fix back to 700 and get the phone version to be this */
+}
+
+html, body {
+  overflow: hidden;
+}
 
 }
