--- a/src/App.css
+++ b/src/App.css
@@ -62,10 +62,6 @@ input[type=button] {
   margin: auto;
 }
 
-.fb-share {
-  width: 80px;
-}
-
 #quiz-layout {
   display: flex;
 }
@@ -349,6 +345,10 @@ M  E  D  I  A    Q  U  E  R  I  E  S
     margin: 10px;
 }
 
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+/*   COLORBLIND VIEW CSS   */
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+
 #outputDiv canvas {
   width: 100%;
   height: 100%;
@@ -411,4 +411,25 @@ M  E  D  I  A    Q  U  E  R  I  E  S
     -moz-column-count: 2;
     column-count: 2;
   }
+}
+
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+/*   SOCIAL MEDIA CSS   */
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+
+
+.sm-share {
+  width: 50px;
+  float: left;
+  height: 50px;
+  margin: 1em;
+  text-align: center;
+}
+
+.sm-join {
+  clear: left;
+}
+
+.fb-join {
+  width: 120px;
 }
