--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 html * {
   box-sizing: border-box;
+  font-family: 'Noto Sans, sans-serif';
 }
 
 html, body {
@@ -7,6 +8,7 @@ html, body {
   padding-left: 5px;
   padding-right: 5px;
   margin: 0px;
+  font-family: 'Noto Sans, sans-serif';
 }
 
 nav {
