--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,9 @@
-html * {
-  box-sizing: border-box;
-}
-
 html, body {
   height: 100%;
   padding-left: 5px;
   padding-right: 5px;
-  margin: 0px;
-}
-
-nav {
-  padding-top: 20px;
-}
+/*  border: 1px solid red;
+*/}
 
 nav {
   padding-top: 20px;
@@ -29,7 +21,6 @@ nav {
 
 body {
  font-family: calibri;
- /*border: 3px solid green;*/
 }
 
 input[type=button] {
@@ -255,9 +246,9 @@ canvas.plates {
 }
 
 .Hues {
-  display: flex;
-  flex-direction: column;
-  width: 700px; /* this is a hack, fix back to 700 and get the phone version to be this */
+  display: felx;
+  flex-direction: row;
+  width: 700px;
 }
 
 #section2 {
@@ -274,16 +265,17 @@ canvas.plates {
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//*
-M  E  D  I  A    Q  U  E  R  I  E  S 
+M  E  D  I  A    Q  U  E  R  I  E  S
 *//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
+
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
   and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) { 
+  and (orientation: portrait) {
   nav {
   padding-top: 10px;
   }
@@ -306,9 +298,9 @@ M  E  D  I  A    Q  U  E  R  I  E  S
   }
 
   .progressbar {
-  width: 35% !important; 
-  left: 10% !important; 
-  top: 66% !important; 
+  width: 35% !important;
+  left: 10% !important;
+  top: 66% !important;
   position: absolute !important;
   }*/
 
@@ -329,6 +321,7 @@ M  E  D  I  A    Q  U  E  R  I  E  S
     margin: 0 auto;
     height: 0px;
   }
+
 }
 
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
@@ -341,7 +334,8 @@ M  E  D  I  A    Q  U  E  R  I  E  S
     border: 1px solid #EFEFEF;
     border-radius: 3px;
     outline: none;
-    width: 60px;
+
+    width: 44px;
     height: 420px;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
@@ -354,37 +348,6 @@ M  E  D  I  A    Q  U  E  R  I  E  S
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 /*   COLORBLIND VIEW CSS   */
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
-.munsell-button {
-  /*border: 1px solid red;*/
-  align-self: center;
-  position: absolute;
-  top: 150px;
-  right: 10px;
-
-  order: 0;
-}
-
-#container-hue{
-  /*border: 1px solid red;*/
-}
-
-.a-flex-row-class{
-  display:flex;
-}
-
-.space-between {
-  justify-content: space-between;
-}
-
-.Hues {
-  display: flex;
-  flex-direction: column;
-  width: 350px; /* this is a hack, fix back to 700 and get the phone version to be this */
-}
-
-html, body {
-  overflow: hidden;
-}
 
 #outputDiv canvas {
   width: 100%;
