--- a/src/stylesheets/components/form.css
+++ b/src/stylesheets/components/form.css
@@ -75,7 +75,7 @@ textarea {
   color: #fff;
   vertical-align: middle;
   white-space: nowrap;
-  background-color: #ffab00;
+  background-color: #4169e1;
   border: 1px solid transparent;
   box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
   cursor: pointer;
