--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 html * {
   box-sizing: border-box;
-  font-family: 'Noto Sans, sans-serif';
+  font-family: 'Noto Sans, sans-serif' !important;
 }
 
 html, body {
