--- a/src/stylesheets/components/navbar.css
+++ b/src/stylesheets/components/navbar.css
@@ -12,7 +12,7 @@ nav a {
   text-align: center;
   padding: 16px 20px;
   text-decoration: none;
-  font-size: 2.0vh;
+  font-size: 17px;
 }
 
 nav a:hover {
