--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 
 html * {
   box-sizing: border-box;
-  font-family: 'Noto Sans, sans-serif' !important;
+  font-family: 'Noto Sans', 'sans-serif' !important;
 }
 
 html, body {
@@ -9,7 +9,7 @@ html, body {
   padding-left: 5px;
   padding-right: 5px;
   margin: 0px;
-  font-family: 'Noto Sans, sans-serif';
+  font-family: 'Noto Sans', 'sans-serif';
 /*  background-color: silver;*/
 }
 
@@ -30,9 +30,11 @@ nav {
   text-align: center;
 }
 
-body {
- font-family: calibri;
-}
+h1 {
+  margin-top: 0;
+  margin-bottom: 3.236rem;
+  text-align: center;
+  font-size: 1.618rem; }
 
 .options {
   list-style: none;
@@ -145,7 +147,7 @@ canvas.plates {
     border-radius: 3px;
     outline: none;
 
-    width: 44px;
+    width: 100px;
     height: 600px;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
@@ -164,7 +166,7 @@ canvas.plates {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-    width: 42px;
+    width: 100px;
     height: 42px;
     padding: 10px 20px;
     background-color: #FFF;
@@ -234,7 +236,7 @@ canvas.plates {
 }
 
 .Hues {
-  display: felx;
+  display: flex;
   flex-direction: row;
   width: 700px;
 }
@@ -329,9 +331,6 @@ M  E  D  I  A    Q  U  E  R  I  E  S
     margin: 10px;
 }
 
-/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
-/*   COLORBLIND VIEW CSS   */
-/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 .munsell-button {
   /*border: 1px solid red;*/
   align-self: center;
@@ -360,73 +359,10 @@ M  E  D  I  A    Q  U  E  R  I  E  S
   width: 350px; /* this is a hack, fix back to 700 and get the phone version to be this */
 }
 
-html, body {
+/*html, body {
   overflow: hidden;
-}
+}*/
 
-#outputDiv canvas {
-  width: 100%;
-  height: 100%;
-}
-.container {
-  display: table;
-  width:100%;
-  height:100%
-}
-.container div {
-  display: table-row;
-}
-
-#dropNotification {
-  position: absolute;
-  top:100px;
-  left: 20px;
-  right:20px;
-  text-align:center;
-  pointer-events: none;
-}
-
-.boxed {
-  background-color: white;
-/*  box-shadow: 5px 5px 2px #999999;
-  border: 1px solid black;
-  border-radius: 10px;*/
-}
-
-#aboutBox {
-  position:absolute;
-  top:50px;
-  left: 25%;
-  width: 50%;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-#outCanvas {
-/*  width: 1100px;*/
-}
-
-.inactive {
-  display: none;
-}
-
-#viewOptions {
-  list-style: none;
-  -webkit-column-count: 3;
-  -moz-column-count: 3;
-  column-count: 3;
-
-}
-
-@media (max-width: 640px)
-{
-  #viewOptions
-  {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
-  }
-}
 
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
 /*   SOCIAL MEDIA CSS   */
@@ -494,7 +430,7 @@ button {
     border-radius: 2px;
 }
 
-button:active, button:focus {
+button:active, button:focus, button:hover {
     background-image: none;
     outline: 0;
     background-color:#0a3dd6;
@@ -519,7 +455,7 @@ input[type=button], input[type=submit] {
     border-color: #0a3dd6 #0a3dd6 #0a3dd6;
   }
 
-input[type=button]:active, input[type=button]:focus, input[type=submit]:active, input[type=submit]:focus {
+input[type=button]:active, input[type=button]:focus, input[type=button]:hover, input[type=submit]:active, input[type=submit]:focus, input[type=submit]:hover {
     background-image: none;
     outline: 0;
     background-color:#0a3dd6;
