--- a/src/App.css
+++ b/src/App.css
@@ -118,7 +118,7 @@ canvas.plates {
     margin: 0 auto;
   }
 }
-
+/* Media Query Ends */
 #numpad {
   order: -1;
   height: 50%;
@@ -137,47 +137,6 @@ canvas.plates {
   padding: 0;
   background-color: lightcyan;
   height: 50px;
-}
-
-.SortableList {
-    position: relative;
-    z-index: 0;
-    background-color: #F3F3F3;
-    border: 1px solid #EFEFEF;
-    border-radius: 3px;
-    outline: none;
-
-    width: 100px;
-    height: 600px;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-    border: 1px solid #E0E0E0;
-    list-style: none;
-    padding: 5px 15px 5px 5px;
-    margin: 20px;
-}
-
-.SortableItem {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    width: 100px;
-    height: 42px;
-    padding: 10px 20px;
-    background-color: #FFF;
-    border-bottom: 1px solid #EFEFEF;
-    box-sizing: border-box;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    color: #333;
-    font-weight: 500;
 }
 
 .Showcase__style__stylizedList{
@@ -321,7 +280,7 @@ M  E  D  I  A    Q  U  E  R  I  E  S
     border-radius: 3px;
     outline: none;
 
-    width: 44px;
+    width: 60px;
     height: 420px;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
@@ -342,7 +301,15 @@ M  E  D  I  A    Q  U  E  R  I  E  S
 }
 
 #container-hue{
-  /*border: 1px solid red;*/
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  max-width: 500px;
+}
+
+.hue-btn{
+  display: flex;
+  max-height: 40px;
 }
 
 .a-flex-row-class{
@@ -358,10 +325,6 @@ M  E  D  I  A    Q  U  E  R  I  E  S
   flex-direction: column;
   width: 350px; /* this is a hack, fix back to 700 and get the phone version to be this */
 }
-
-/*html, body {
-  overflow: hidden;
-}*/
 
 
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
