--- a/src/stylesheets/components/results.css
+++ b/src/stylesheets/components/results.css
@@ -1,3 +1,11 @@
-.reults {
-  
+.results {
+  padding: 2rem;
+  margin-top: 2rem;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 83.75rem;
+  min-height: 45em;
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
 }
