Add styling to ishihara results and instructions.

--- a/src/stylesheets/components/results.css
+++ b/src/stylesheets/components/results.css
@@ -1,3 +1,9 @@
-.reults {
-  
+#interpretation {
+  padding-top: 10px;
+  font-size: 1.2em; 
+}
+
+#disclaimer {
+  color: gray;
+  font-style: italic;
 }
