--- a/src/App.css
+++ b/src/App.css
@@ -438,6 +438,7 @@ button:active, button:focus, button:hover {
     background-image: none;
     outline: 0;
     background-color:#0a3dd6;
+    box-shadow: 0 18px 35px rgba(50, 50, 93, 0.1), 0 8px 15px rgba(0, 0, 0, 0.07);
 }
 
 input[type=button], input[type=submit] {
@@ -463,6 +464,7 @@ input[type=button]:active, input[type=button]:focus, input[type=button]:hover, i
     background-image: none;
     outline: 0;
     background-color:#0a3dd6;
+    box-shadow: 0 18px 35px rgba(50, 50, 93, 0.1), 0 8px 15px rgba(0, 0, 0, 0.07);
   }
 
 a:link, a:visited {
