--- a/src/stylesheets/components/home.css
+++ b/src/stylesheets/components/home.css
@@ -8,3 +8,18 @@
   border-radius: 3px;
   box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
 }
+
+#tests {
+  text-align: center;
+  width: 90%;
+  margin-right: 5%;
+  margin-left: 5%;
+}
+
+#tests #ishihara-test {
+  
+}
+
+#tests #hue-test {
+  
+}
