--- a/src/stylesheets/components/form.css
+++ b/src/stylesheets/components/form.css
@@ -36,7 +36,7 @@ h1 {
 .form-label {
   display: inline-block;
   margin-bottom: .5rem;
-  font-size: .75rem;}
+  font-size: 14px;}
 
 .form-input,
 .form-textarea {
