--- a/src/stylesheets/components/results.css
+++ b/src/stylesheets/components/results.css
@@ -21,3 +21,22 @@
   box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
 }
 
+#details {
+  box-shadow: 2px 2px 1px #a5a5a5;
+  background-color: #eff5ff;
+  color: #232426;
+  font-size: 0.9em;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  padding:2%;
+  padding-right: 3%;
+  padding-left: 3%;
+}
+
+#details ol {
+  width: 45%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+}
