--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,22 @@ canvas.plates {
     height: 40%;
 }
 
+#eye-logo{
+  display: inline-block;
+  /* position: absolute;
+  left: 5px;
+  top:15px; */
+}
+
+#nb{
+  position: relative;
+  top:150px;
+}
+
+#lh1{
+  margin: 0px;
+}
+
 @media only screen
   and (min-device-width: 375px)
   and (max-device-width: 667px)
